# TTS-Audio-Suite

./: CHANGELOG.md  README.md  install.py  nodes.py  pyproject.toml  requirements.txt
docs/Dev reports/: tts_audio_suite_engines.yaml
docs/plans/: 2026-05-11-vc-engines-design.md  2026-05-11-vc-engines-implementation.md
engines/adapters/: ezvc_adapter.py  seedvc_adapter.py  vevo_adapter.py
engines/ezvc/: __init__.py  ezvc_engine.py
engines/rvc/: minimal_reference_wrapper.py
engines/rvc/impl/lib/: rmvpe.py
engines/seedvc/: __init__.py  seedvc_engine.py
engines/vevo/: __init__.py  vevo_engine.py
nodes/engines/: ezvc_engine_node.py  seedvc_engine_node.py  vevo_engine_node.py
nodes/unified/: voice_changer_node.py
utils/audio/: librosa_fallback.py
utils/models/: engine_registry.py
